openapi & formatting
